# manifest

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  HACKING.rst  LEVEL.rst  Makefile  README.rst  aprasas.csv  datasets.csv  docker-compose.yml  get_data_gov_lt.in  itpr.csv  notes.rst  orgs.csv  prefixes.yml  pull.sh  pyproject.toml  qb.csv  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
adman/: analytics.py  schema.py
admanifest/: analytics.py  manifest.py  schema.py
docker/: Dockerfile
docs/: Makefile  api.rst  asmens-duomenys.rst  atverimas.rst  conf.py  contributing.rst  demand.rst  dependencies.rst  duomenu-saltiniai.rst  formulas.rst  gid.rst  glossary.rst  index.rst  inventorinimas.rst  inventory.rst  inventorying.rst  ivadas.rst  katalogas.rst  maturity.rst  norm.rst  params.rst  personal-data.rst  pk.rst  poreikio-deklaravimas.rst  priemones.rst  requirements.in  requirements.txt  savokos.rst  sources.rst  spec.rst  spinta.rst  tools.rst  vocabulary.rst
lodam/: app.py  config.py  manifest.py  testing.py
models/: educational_institution.yml  road_sign.yml
notebooks/: Untitled.ipynb  manifest.csv  metrics.ipynb
projects/: atviriduomenys.lt.yml  manopozicija.lt.yml  manoseimas.lt.yml
providers/: lrs.yml
schema/: _data.yml  _source.yml  data.yml  dataset.yml  model.yml  project.yml  provider.yml  seimo_narys.yml  source.yml  vocabulary.yml
scripts/: build-wheels.sh  check.py  conver-manifest  convert-inventory  csv-to-manifest  gsheetstomanifest.py  (+5 more)
(+2372 files in other folders)
